snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/maven-metadata.xml.sha512
c9aeb08184683ea0ea4f2b8d8cdb62c37787d386f82cd9a0d20bedd6396ae7db929da671040999f03b99454ed5f38fc0bd76e48e9b4dccedf73c4edba3a8803b